# Esp32S3-and-VL53L0X

./: CMakeLists.txt  I2C_test.c  README.md
esp32cam/: CMakeLists.txt
esp_server/: index.js  package-lock.json  package.json
main/: CMakeLists.txt  main.c
main/events/: device_camera.c  device_init.c  device_sender.c  device_sensor_active.c  device_threshold.c  device_wifi.c
main/events/include/: device_camera.h  device_init.h  device_sender.h  device_sensor_active.h  device_threshold.h  device_wifi.h
vl53l0x/: CMakeLists.txt
vl53l0x/include/: vl53l0x_platform.h  vl53l0x_platform_log.h
vl53l0x/src/: vl53l0x_api.c  vl53l0x_api_core.c  vl53l0x_platform.c  vl53l0x_platform_log.c
